Added a blank CSS file and connected it

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <body>
     <!-- The body of the html document; everything in here will render -->
 
+      <h1>Introduction to CSS</h1>
+      <p>Some texty text stuff and things and text junk</p>
 
 
     </body>
