Added background colour.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
       <meta charset="utf-8">
       <title>Intro to CSS</title>
     <!-- Used for metadat about this file; will not be rendered -->
-    </html>
-    <body>
+    <link href="css/main.css" rel="stylesheet">
+  </head>
+  <body>
     <!-- The body of the html document; everything in here will render -->
 
       <h1>Introduction to CSS</h1>
