Added ordered list and changed font.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <title>Intro to CSS</title>
     <!-- Used for metadat about this file; will not be rendered -->
     <link href="css/main.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Oswald:400,700|Francois+One' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <!-- The body of the html document; everything in here will render -->
@@ -12,6 +13,11 @@
       <h1>Introduction to CSS</h1>
       <p>Some texty text stuff and things and text junk</p>
 
+      <ol>
+        <li>T-Rex</li>
+        <li>Stegasaurus</li>
+        <li>Apatosaurus</li>
+      </ol>
 
     </body>
 </html>
